--- a/applets/CMakeLists.txt
+++ b/applets/CMakeLists.txt
@@ -21,3 +21,4 @@ add_subdirectory(timer)
 add_subdirectory(userswitcher)
 add_subdirectory(weather)
 add_subdirectory(webbrowser)
+add_subdirectory(katesessions)
