--- a/applets/CMakeLists.txt
+++ b/applets/CMakeLists.txt
@@ -2,6 +2,7 @@ plasma_install_package(activitypager org.kde.plasma.activitypager)
 plasma_install_package(kickerdash org.kde.plasma.kickerdash)
 plasma_install_package(konsoleprofiles/package org.kde.plasma.konsoleprofiles)
 plasma_install_package(keyboardindicator org.kde.plasma.keyboardindicator)
+plasma_install_package(katesessions org.kde.plasma.addons.katesessions)
 
 add_subdirectory(binary-clock)
 add_subdirectory(calculator)
@@ -21,4 +22,3 @@ add_subdirectory(timer)
 add_subdirectory(userswitcher)
 add_subdirectory(weather)
 add_subdirectory(webbrowser)
-add_subdirectory(katesessions)
